Export CSV Fonctionnel

--- a/templates/inventaire/index.html.twig
+++ b/templates/inventaire/index.html.twig
@@ -26,6 +26,9 @@
         </div>
     {% endfor %}
 
+    <a href="{{ path('app_inventaire_export') }}" class="btn btn-primary">Exporter en CSV</a>
+
+
     <table>
         <thead>
             <tr>
