--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -3,40 +3,77 @@
 {# {% block title %}Log in!{% endblock %} #}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{asset('css/styleLogin.css')}}" type="text/css">
+    {# <link rel="stylesheet" href="{{ asset('css/styleLogin.css') }}" type="text/css"> #}
+    <link rel="shortcut icon" type="image/png" href="{{ asset('assets/images/logos/favicon.png') }}" />
+    <link rel="stylesheet" href="{{ asset('css/styles.min.css') }}" />
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="left-side"></div>
-    <div class="right-side">
-        <form method="post" class="login-form">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+<!-- Body Wrapper -->
+<div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+    data-sidebar-position="fixed" data-header-position="fixed">
+    <div class="position-relative overflow-hidden radial-gradient min-vh-100 d-flex align-items-center justify-content-center">
+        <div class="d-flex align-items-center justify-content-center w-100">
+            <div class="row justify-content-center w-100">
+                <div class="col-md-8 col-lg-6 col-xxl-3">
+                    <div class="card mb-0">
+                        <div class="card-body">
+                            <a href="{{ path('homepage') }}" class="text-nowrap logo-img text-center d-block py-3 w-100">
+                                <img src="{{ asset('asset/edu2.png') }}" width="180" alt="Logo">
+                            </a>
+                            <p class="text-center">Your Social Campaigns</p>
 
-            {% if app.user %}
-                <div class="mb-3">
-                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                            <form method="post" class="login-form">
+                                {% if error %}
+                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                {% endif %}
+
+                                {% if app.user %}
+                                    <div class="mb-3">
+                                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                                    </div>
+                                {% endif %}
+
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Username</label>
+                                    <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
+                                </div>
+
+                                <div class="mb-4">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+                                </div>
+
+                                {# <div class="d-flex align-items-center justify-content-between mb-4">
+                                    <div class="form-check">
+                                        <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
+                                        <label class="form-check-label text-dark" for="flexCheckChecked">
+                                            Se Souvenir de moi
+                                        </label>
+                                    </div>
+                                     <a class="text-primary fw-bold" href="{{ path('forgot_password') }}">Forgot Password?</a> 
+                                </div> #}
+
+                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                                <button class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2" type="submit">Se Connecter</button>
+
+                                <div class="d-flex align-items-center justify-content-center">
+                                    <p class="fs-4 mb-0 fw-bold">Vous êtes Nouveau?</p>
+                                    <a class="text-primary fw-bold ms-2" href="{{ path('app_register') }}">Créer un compte</a>
+                                </div>
+                            </form>
+
+                        </div>
+                    </div>
                 </div>
-            {% endif %}
-            </br>
-            <div class="logo-container">
-                <img src="{{ asset('asset/logo.png') }}" alt="Logo" class="logo">
             </div>
-            <div class="form-group">
-                <label for="username">Nom d'Utilisateur :</label>
-                <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de Passe :</label>
-                <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-            </div>
-            </br>
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-            <button class="btn btn-primary btn-block" type="submit">Se Connecter</button>
-        </form>
+        </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('libs/jquery/dist/jquery.min.js') }}"></script>
+    <script src="{{ asset('libs/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
 {% endblock %}
