--- a/templates/inventory/inventory.html.twig
+++ b/templates/inventory/inventory.html.twig
@@ -35,7 +35,7 @@
                         <table class="table table-striped table-bordered text-nowrap align-middle">
                             <thead class="text-dark fs-4">
                                 <tr>
-                                    <th>Nom</th>
+                                    {# <th>Nom</th> #}
                                     <th>Type Actif</th>
                                     <th>Prix</th>
                                     <th>Numéro de Série Produit</th>
@@ -50,7 +50,7 @@
                             <tbody>
                                 {% for inventory in inventories %}
                                     <tr>
-                                        <td>{{ inventory.name }}</td>
+                                        {# <td>{{ inventory.name }}</td> #}
                                         <td>{{ inventory.activeType }}</td>
                                         <td>{{ inventory.price }}</td>
                                         <td>{{ inventory.numProductSerie }}</td>
