ajout bouton suppression ligne inventaire

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
               <span class="hide-menu">Home</span>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/inventory.html.twig" aria-expanded="false">
+              <a class="sidebar-link" href="{{path('app_inventory')}}" aria-expanded="false">
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
@@ -43,11 +43,11 @@
               <span class="hide-menu">UI COMPONENTS</span>
             </li>
             <li class="sidebar-item">
-              <a class="sidebar-link" href="ui/ui-buttons.html" aria-expanded="false">
+              <a class="sidebar-link" href="{{path('app_choose_etablishment')}}" aria-expanded="false">
                 <span>
                   <i class="ti ti-article"></i>
                 </span>
-                <span class="hide-menu">Buttons</span>
+                <span class="hide-menu">Choose</span>
               </a>
             </li>
             <li class="sidebar-item">
