--- a/templates/inventory/inventory.html.twig
+++ b/templates/inventory/inventory.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{asset('css/styleInventory.css')}}" type="text/css">
+    <link rel="stylesheet" href="{{ asset('css/styleInventory.css') }}" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
 {% endblock %}
@@ -35,7 +35,6 @@
                         <table class="table table-striped table-bordered text-nowrap align-middle">
                             <thead class="text-dark fs-4">
                                 <tr>
-                                    {# <th>Nom</th> #}
                                     <th>Type Actif</th>
                                     <th>Prix</th>
                                     <th>Numéro de Série Produit</th>
@@ -45,12 +44,12 @@
                                     <th>Numéro de Série</th>
                                     <th>Numéro Facture Interne</th>
                                     <th>Numéro Facture</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for inventory in inventories %}
                                     <tr>
-                                        {# <td>{{ inventory.name }}</td> #}
                                         <td>{{ inventory.activeType }}</td>
                                         <td>{{ inventory.price }}</td>
                                         <td>{{ inventory.numProductSerie }}</td>
@@ -60,6 +59,12 @@
                                         <td>{{ inventory.numSerie }}</td>
                                         <td>{{ inventory.numInvoiceIntern }}</td>
                                         <td>{{ inventory.numInvoice }}</td>
+                                        <td>
+                                            <form action="{{ path('app_inventory_delete', {'id': inventory.id}) }}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
+                                                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ inventory.id) }}">
+                                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
+                                            </form>
+                                        </td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
@@ -73,4 +78,5 @@
         </div>
     </div>
 </div>
+<script src="{{ asset('js/confirmDelete.js') }}"></script>
 {% endblock %}
